sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:8: error: reassignment to val
      echange(x,i+1);i=i+1
                      ^