sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var x= 0
  var a = getNombreValeurs()
  for ( i<- 0 to a-2){
    x=getValeur(i)
    while(!plusPetit(x,i+1)){
      echange(x,i+1);i=i+1
    }
  }
}